--- a/fe/src/index.css
+++ b/fe/src/index.css
@@ -31,3 +31,12 @@
     /* Chrome 26+, Opera 23+, Firefox 39+ */
       url("http://script.ebay.co.kr/fonts/GmarketSansLight.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
+
+@layer components {
+  .btn-r {
+    @apply bg-y-red text-white rounded-lg py-2 px-4 m-1;
+  }
+  .btn-g {
+    @apply bg-y-lightGray text-white rounded-lg py-2 px-4 m-1;
+  }
+}
