EWHA-10 feat: 마이페이지 및 하위 페이지 일부 제작

--- a/fe/src/index.css
+++ b/fe/src/index.css
@@ -64,4 +64,7 @@
   .radio-peer {
     @apply rounded-lg py-1 border-2 border-y-red text-center peer-checked:bg-y-red peer-checked:text-white;
   }
+  .page-title {
+    @apply text-center text-xl p-3 border-b border-y-lightGray;
+  }
 }
