--- a/fe/src/index.css
+++ b/fe/src/index.css
@@ -50,21 +50,21 @@
 
 @layer components {
   .btn-r {
-    @apply bg-y-red text-white rounded-lg py-2 px-4 m-1 focus:outline-none hover:bg-red-600;
+    @apply bg-y-red text-white rounded-lg py-2 px-4 m-1 focus:outline-none hover:bg-red-600 md:text-xl;
   }
   .btn-g {
-    @apply bg-y-lightGray text-white rounded-lg py-2 px-4 m-1 focus:outline-none hover:bg-neutral-500;
+    @apply bg-y-lightGray text-white rounded-lg py-2 px-4 m-1 focus:outline-none hover:bg-neutral-500 md:text-xl;
   }
   .btn-p {
-    @apply bg-y-purple text-white rounded-lg py-2 px-4 m-1 focus:outline-none hover:bg-violet-700;
+    @apply bg-y-purple text-white rounded-lg py-2 px-4 m-1 focus:outline-none hover:bg-violet-700 md:text-xl;
   }
   .input-basic {
-    @apply border border-y-lightGray rounded-lg p-2 focus:outline-y-red font-thin;
+    @apply border border-y-lightGray rounded-lg p-2 focus:outline-y-red font-thin md:text-xl;
   }
   .radio-peer {
     @apply rounded-lg py-1 border-2 border-y-red text-center peer-checked:bg-y-red peer-checked:text-white;
   }
   .page-title {
-    @apply text-center text-xl p-3 border-b border-y-lightGray;
+    @apply text-center text-xl p-3 border-b border-y-lightGray md:text-2xl;
   }
 }
